# trabalho-eng-dados

./: README.md
pyspark-delta/: pyproject.toml
pyspark-delta/.ipynb_checkpoints/: delta-checkpoint.ipynb  descricao-checkpoint.ipynb
pyspark-delta/RAW/CLIENTES/: .part-00000-0ab4a794-775b-4103-a8bc-2ec89ba23f4f-c000.snappy.parquet.crc  .part-00000-5fc8f318-0875-4f3c-9a1e-1b8f7277a0b9-c000.snappy.parquet.crc  .part-00000-aa814e2e-f5ef-43c4-99c3-e7a84366baf4-c000.snappy.parquet.crc  .part-00001-aee5d6f4-28e6-4a8f-8c32-44114dd521f4-c000.snappy.parquet.crc  part-00000-0ab4a794-775b-4103-a8bc-2ec89ba23f4f-c000.snappy.parquet  part-00000-5fc8f318-0875-4f3c-9a1e-1b8f7277a0b9-c000.snappy.parquet  part-00000-aa814e2e-f5ef-43c4-99c3-e7a84366baf4-c000.snappy.parquet  part-00001-aee5d6f4-28e6-4a8f-8c32-44114dd521f4-c000.snappy.parquet
pyspark-delta/RAW/CLIENTES/_delta_log/: .00000000000000000000.json.crc  .00000000000000000001.json.crc  .00000000000000000002.json.crc  .00000000000000000003.checkpoint.parquet.crc  .00000000000000000003.json.crc  ._last_checkpoint.crc  _last_checkpoint
pyspark-iceberg/: iceberg.ipynb  pyproject.toml
pyspark-iceberg/.ipynb_checkpoints/: iceberg-checkpoint.ipynb
