[tool.poetry]
name = "pyspark-delta"
version = "0.1.0"
description = ""
authors = ["ardnaile <elimottacardoso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "3.4.2"
delta-spark = "2.4.0"
jupyterlab = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
